@@ -27,9 +27,12 @@ import jeeves.exceptions.BadFormatEx;
 import jeeves.resources.dbms.Dbms;
 import jeeves.server.context.ServiceContext;
 import jeeves.utils.BinaryFile;
+import jeeves.utils.IO;
 import jeeves.utils.Log;
 import jeeves.utils.Util;
 import jeeves.utils.Xml;
+
+import org.apache.commons.io.IOUtils;
 import org.fao.geonet.GeonetContext;
 import org.fao.geonet.constants.Geonet;
 import org.fao.geonet.constants.Params;
@@ -252,10 +255,10 @@ public class Importer {
 				
 				
 				Element metadata = md.get(index);
-				String schema = dm.autodetectSchema(metadata);
+				String schema = dm.autodetectSchema(metadata, null);
 
 				if (schema == null)
-					throw new Exception("Unknown schema format : " + schema);
+					throw new Exception("Unknown schema");
 
 				// Handle non MEF files insertion
 				if (info.getChildren().size() == 0) {
@@ -330,7 +333,7 @@ public class Importer {
 
 				if (validate) {
 					// Validate xsd and schematron
-					dm.validateMetadata(schema, metadata, context);
+					DataManager.validateMetadata(schema, metadata, context);
                 }
 
 				String uuidAction = Util.getParam(params, Params.UUID_ACTION,
@@ -372,11 +375,11 @@ public class Importer {
 
 				if (rating != null)
 					dbms.execute("UPDATE Metadata SET rating=? WHERE id=?",
-							new Integer(rating), iId);
+							Integer.valueOf(rating), iId);
 
 				if (popularity != null)
 					dbms.execute("UPDATE Metadata SET popularity=? WHERE id=?",
-							new Integer(popularity), iId);
+							Integer.valueOf(popularity), iId);
 
 				dm.setTemplateExt(dbms, iId, isTemplate, null);
 				dm.setHarvestedExt(dbms, iId, null);
@@ -386,8 +389,8 @@ public class Importer {
 				String priDir = Lib.resource.getDir(context, "private", id
 						.get(index));
 
-				new File(pubDir).mkdirs();
-				new File(priDir).mkdirs();
+		        IO.mkdirs(new File(pubDir), "MEF Importer public resources directory for metadata "+id);
+		        IO.mkdirs(new File(priDir), "MEF Importer private resources directory for metadata "+id);
 
 				if (categs != null)
 					addCategories(context, dm, dbms, id.get(index), categs);
@@ -398,7 +401,7 @@ public class Importer {
 					addOperations(context, dm, dbms, privileges, id.get(index), groupId);
 
 				if (indexGroup) {
-					dm.indexMetadataGroup(dbms, id.get(index));
+					dm.indexMetadata(dbms, id.get(index));
 				}
                 else {
                     dm.indexInThreadPool(context,id.get(index),dbms);
@@ -515,8 +518,9 @@ public class Importer {
 					insertedWithLocalId = true;
 				}
 			} catch (NumberFormatException e) {
-                if(Log.isDebugEnabled(Geonet.MEF))
+                if(Log.isDebugEnabled(Geonet.MEF)) {
                     Log.debug(Geonet.MEF, "Invalid localId provided: " + localId + ". Adding record with a new id.");
+                }
 			}
 		} 
 		
@@ -542,10 +546,14 @@ public class Importer {
 		String dir = Lib.resource.getDir(context, access, id);
 
 		File outFile = new File(dir, file);
-		FileOutputStream os = new FileOutputStream(outFile);
-		BinaryFile.copy(is, os, false, true);
-
-		outFile.setLastModified(new ISODate(changeDate).getSeconds() * 1000);
+		FileOutputStream os=null;
+		try {
+            os = new FileOutputStream(outFile);
+    		BinaryFile.copy(is, os);
+    		IO.setLastModified(outFile, new ISODate(changeDate).getSeconds() * 1000, Geonet.MEF);
+		} finally {
+		    IOUtils.closeQuietly(os);
+		}
 	}
 
 	/**
@@ -560,12 +568,13 @@ public class Importer {
 	 */
 	public static void addCategories(ServiceContext context, DataManager dm, Dbms dbms, String id,
 			Element categ) throws Exception {
-		List locCats = dbms.select("SELECT id,name FROM Categories")
-				.getChildren();
-		List list = categ.getChildren("category");
+		@SuppressWarnings("unchecked")
+        List<Element> locCats = dbms.select("SELECT id,name FROM Categories").getChildren();
+		@SuppressWarnings("unchecked")
+        List<Element> list = categ.getChildren("category");
 
-        for (Object aList : list) {
-            String catName = ((Element) aList).getAttributeValue("name");
+        for (Element categoryEl : list) {
+            String catName = categoryEl.getAttributeValue("name");
             String catId = mapLocalEntity(locCats, catName);
 
             if (catId == null) {
@@ -592,11 +601,12 @@ public class Importer {
 	 */
 	private static void addPrivileges(ServiceContext context, DataManager dm, Dbms dbms, String id,
 			Element privil) throws Exception {
-		List locGrps = dbms.select("SELECT id,name FROM Groups").getChildren();
-		List list = privil.getChildren("group");
+		@SuppressWarnings("unchecked")
+        List<Element> locGrps = dbms.select("SELECT id,name FROM Groups").getChildren();
+		@SuppressWarnings("unchecked")
+        List<Element> list = privil.getChildren("group");
 
-		for (Object g : list) {
-			Element group = (Element) g;
+		for (Element group : list) {
 			String grpName = group.getAttributeValue("name");
 			boolean groupOwner = group.getAttributeValue("groupOwner") != null;
 			String grpId = mapLocalEntity(locGrps, grpName);
@@ -632,10 +642,10 @@ public class Importer {
 	 */
 	private static void addOperations(ServiceContext context, DataManager dm, Dbms dbms, Element group,
 			String id, String grpId) throws Exception {
-		List opers = group.getChildren("operation");
+		@SuppressWarnings("unchecked")
+        List<Element> opers = group.getChildren("operation");
 
-        for (Object oper1 : opers) {
-            Element oper = (Element) oper1;
+        for (Element oper : opers) {
             String opName = oper.getAttributeValue("name");
 
             int opId = dm.getAccessManager().getPrivilegeId(opName);
@@ -652,10 +662,8 @@ public class Importer {
         }
 	}
 
-	private static String mapLocalEntity(List entities, String name) {
-		for (Object e : entities) {
-			Element entity = (Element) e;
-
+	private static String mapLocalEntity(List<Element> entities, String name) {
+		for (Element entity : entities) {
 			if (entity.getChildText("name").equals(name)
 					|| entity.getChildText("id").equals(name))
 				return entity.getChildText("id");
