@@ -29,7 +29,8 @@ import jeeves.resources.dbms.Dbms;
 import jeeves.server.context.ServiceContext;
 import jeeves.utils.BinaryFile;
 import jeeves.utils.Xml;
-import jeeves.xlink.Processor;
+
+import org.apache.commons.io.IOUtils;
 import org.fao.geonet.GeonetContext;
 import org.fao.geonet.constants.Edit;
 import org.fao.geonet.constants.Geonet;
@@ -50,10 +51,13 @@ import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipInputStream;
 import java.util.zip.ZipOutputStream;
+
+import javax.annotation.Nonnull;
 
 import static org.fao.geonet.kernel.mef.MEFConstants.DIR_PRIVATE;
 import static org.fao.geonet.kernel.mef.MEFConstants.DIR_PUBLIC;
@@ -226,16 +230,16 @@ public class MEFLib {
 	 */
 	static Element retrieveMetadata(ServiceContext context, Dbms dbms, String uuid, boolean resolveXlink, boolean removeXlinkAttribute)
 			throws Exception {
-		List list = dbms.select("SELECT * FROM Metadata WHERE uuid=?", uuid).getChildren();
+		@SuppressWarnings("unchecked")
+        List<Element> list = dbms.select("SELECT * FROM Metadata WHERE uuid=?", uuid).getChildren();
 
-
-		if (list.size() == 0)
+		if (list.isEmpty())
 			throw new MetadataNotFoundEx("uuid=" + uuid);
 
 		GeonetContext gc = (GeonetContext) context.getHandlerContext(Geonet.CONTEXT_NAME);
         DataManager dm = gc.getDataManager();
 
-		Element record = (Element) list.get(0);
+		Element record = list.get(0);
 		String id = record.getChildText("id");
         record.removeChildren("data");
         boolean forEditing = false;
@@ -260,7 +264,6 @@ public class MEFLib {
 	static void createDir(ZipOutputStream zos, String name) throws IOException {
 		ZipEntry entry = new ZipEntry(name);
 		zos.putNextEntry(entry);
-		zos.closeEntry();
 	}
 
 	/**
@@ -268,15 +271,25 @@ public class MEFLib {
 	 * 
 	 * @param zos
 	 * @param name
-	 * @param is
+	 * @param in
 	 * @throws IOException
 	 */
-	static void addFile(ZipOutputStream zos, String name, InputStream is)
+	static void addFile(ZipOutputStream zos, String name, @Nonnull InputStream in)
 			throws IOException {
-		ZipEntry entry = new ZipEntry(name);
+	       ZipEntry entry = null;
+	        try {
+	            entry = new ZipEntry(name);
 		zos.putNextEntry(entry);
-		BinaryFile.copy(is, zos, true, false);
+	            BinaryFile.copy(in, zos);
+	        } finally {
+	            try {
+	                if(zos != null) {
 		zos.closeEntry();
+	}
+	            } finally {
+	                IOUtils.closeQuietly(in);
+	            }
+	        }
 	}
 
 	/**
@@ -411,10 +424,10 @@ public class MEFLib {
 		String query = "SELECT name FROM MetadataCateg, Categories "
 				+ "WHERE categoryId = id AND metadataId = ?";
 
-		List list = dbms.select(query, new Integer(id)).getChildren();
+		@SuppressWarnings("unchecked")
+        List<Element> list = dbms.select(query, Integer.valueOf(id)).getChildren();
 
-		for (int i = 0; i < list.size(); i++) {
-			Element record = (Element) list.get(i);
+		for (Element record : list) {
 			String name = record.getChildText("name");
 
 			Element cat = new Element("category");
@@ -440,7 +453,7 @@ public class MEFLib {
 				.open(Geonet.Res.MAIN_DB);
 
 		String id = md.getChildText("id");
-		int iId = new Integer(id);
+		int iId = Integer.valueOf(id);
 		String query = "SELECT Groups.id as grpid, Groups.name as grpName, Operations.name as operName "
 				+ "FROM   OperationAllowed, Groups, Operations "
 				+ "WHERE  groupId = Groups.id "
@@ -467,10 +480,10 @@ public class MEFLib {
 
 		// --- scan query result to collect info
 
-		List list = dbms.select(query, iId).getChildren();
+		@SuppressWarnings("unchecked")
+        List<Element> list = dbms.select(query, iId).getChildren();
 
-		for (int i = 0; i < list.size(); i++) {
-			Element record = (Element) list.get(i);
+		for (Element record : list) {
 			String grpId = record.getChildText("grpid");
 			String grpName = record.getChildText("grpname");
 			String operName = record.getChildText("opername");
@@ -495,7 +508,8 @@ public class MEFLib {
 
 		Element privil = new Element("privileges");
 
-		for (String grpName : hmPriv.keySet()) {
+		for (Map.Entry<String, ArrayList<String>> entry : hmPriv.entrySet()) {
+		    String grpName = entry.getKey();
 			Element group = new Element("group");
 			group.setAttribute("name", grpName);
 			// Handle group owner
@@ -504,7 +518,7 @@ public class MEFLib {
 
 			privil.addContent(group);
 
-			for (String operName : hmPriv.get(grpName)) {
+			for (String operName : entry.getValue()) {
 				Element oper = new Element("operation");
 				oper.setAttribute("name", operName);
 
