@@ -24,7 +24,6 @@
 package org.fao.geonet.services.category;
 
 import jeeves.constants.Jeeves;
-import jeeves.interfaces.Service;
 import jeeves.resources.dbms.Dbms;
 import jeeves.server.ServiceConfig;
 import jeeves.server.context.ServiceContext;
@@ -32,16 +31,17 @@ import jeeves.utils.Util;
 import org.fao.geonet.constants.Geonet;
 import org.fao.geonet.constants.Params;
 import org.fao.geonet.lib.Lib;
+import org.fao.geonet.services.NotInReadOnlyModeService;
 import org.jdom.Element;
 
-//=============================================================================
-
-/** Update the information of a category
-  */
-
-public class Update implements Service
+/**
+ * Update the information of a category.
+ */
+public class Update extends NotInReadOnlyModeService
 {
-	public void init(String appPath, ServiceConfig params) throws Exception {}
+	public void init(String appPath, ServiceConfig params) throws Exception {
+        super.init(appPath, params);
+    }
 
 	//--------------------------------------------------------------------------
 	//---
@@ -49,7 +49,8 @@ public class Update implements Service
 	//---
 	//--------------------------------------------------------------------------
 
-	public Element exec(Element params, ServiceContext context) throws Exception
+    @Override
+	public Element serviceSpecificExec(Element params, ServiceContext context) throws Exception
 	{
 		String id   = params.getChildText(Params.ID);
 		String name = Util.getParam(params, Params.NAME);
@@ -69,7 +70,7 @@ public class Update implements Service
 		}
 		else 	//--- For Update
 		{
-			dbms.execute("UPDATE Categories SET name=? WHERE id=?", name, new Integer(id));
+			dbms.execute("UPDATE Categories SET name=? WHERE id=?", name, Integer.valueOf(id));
 
 			elRes.addContent(new Element(Jeeves.Elem.OPERATION).setText(Jeeves.Text.UPDATED));
 		}
@@ -77,6 +78,3 @@ public class Update implements Service
 		return elRes;
 	}
 }
-
-//=============================================================================
-
