@@ -24,7 +24,6 @@
 package org.fao.geonet.services.group;
 
 import jeeves.constants.Jeeves;
-import jeeves.interfaces.Service;
 import jeeves.resources.dbms.Dbms;
 import jeeves.server.ServiceConfig;
 import jeeves.server.context.ServiceContext;
@@ -33,19 +32,18 @@ import org.fao.geonet.GeonetContext;
 import org.fao.geonet.constants.Geonet;
 import org.fao.geonet.constants.Params;
 import org.fao.geonet.kernel.DataManager;
+import org.fao.geonet.services.NotInReadOnlyModeService;
 import org.fao.geonet.services.util.ServiceMetadataReindexer;
 import org.jdom.Element;
 
 import java.util.List;
 
-//=============================================================================
 
-/** Removes a group from the system. Note that the group MUST NOT have operations
-  * associated
-  */
-
-public class Remove implements Service
-{
+/**
+ * Removes a group from the system. Note that the group MUST NOT have operations
+ * associated.
+ */
+public class Remove extends NotInReadOnlyModeService {
 	public void init(String appPath, ServiceConfig params) throws Exception {}
 
 	//--------------------------------------------------------------------------
@@ -54,16 +52,17 @@ public class Remove implements Service
 	//---
 	//--------------------------------------------------------------------------
 
-	public Element exec(Element params, ServiceContext context) throws Exception
+	public Element serviceSpecificExec(Element params, ServiceContext context) throws Exception
 	{
 		String id = Util.getParam(params, Params.ID);
 
 		Dbms dbms = (Dbms) context.getResourceManager().open (Geonet.Res.MAIN_DB);
 
-		Integer iId = new Integer(id);
+		Integer iId = Integer.valueOf(id);
 		String query = "SELECT DISTINCT metadataId FROM OperationAllowed WHERE groupId=?";
 
-		List<Element> reindex = dbms.select(query, iId).getChildren();
+		@SuppressWarnings("unchecked")
+        List<Element> reindex = dbms.select(query, iId).getChildren();
 
 		dbms.execute("DELETE FROM OperationAllowed WHERE groupId=?",iId);
 		dbms.execute("DELETE FROM UserGroups       WHERE groupId=?",iId);
@@ -76,12 +75,9 @@ public class Remove implements Service
 		DataManager   dm = gc.getDataManager();
 
 		ServiceMetadataReindexer s = new ServiceMetadataReindexer(dm, dbms, reindex);
-		s.processWithFastIndexing();
+		s.process();
 
 		return new Element(Jeeves.Elem.RESPONSE)
 							.addContent(new Element(Jeeves.Elem.OPERATION).setText(Jeeves.Text.REMOVED));
 	}
 }
-
-//=============================================================================
-
