@@ -24,7 +24,6 @@
 package org.fao.geonet.services.group;
 
 import jeeves.constants.Jeeves;
-import jeeves.interfaces.Service;
 import jeeves.resources.dbms.Dbms;
 import jeeves.server.ServiceConfig;
 import jeeves.server.context.ServiceContext;
@@ -32,15 +31,14 @@ import jeeves.utils.Util;
 import org.fao.geonet.constants.Geonet;
 import org.fao.geonet.constants.Params;
 import org.fao.geonet.lib.Lib;
+import org.fao.geonet.services.NotInReadOnlyModeService;
 import org.jdom.Element;
 
-//=============================================================================
 
-/** Update the information of a group
-  */
-
-public class Update implements Service
-{
+/**
+ * Update the information of a group.
+ */
+public class Update extends NotInReadOnlyModeService {
 	public void init(String appPath, ServiceConfig params) throws Exception {}
 
 	//--------------------------------------------------------------------------
@@ -49,7 +47,7 @@ public class Update implements Service
 	//---
 	//--------------------------------------------------------------------------
 
-	public Element exec(Element params, ServiceContext context) throws Exception
+	public Element serviceSpecificExec(Element params, ServiceContext context) throws Exception
 	{
 		String id    = params.getChildText(Params.ID);
 		String name  = Util.getParam(params, Params.NAME);
@@ -75,7 +73,7 @@ public class Update implements Service
 		{
 			String query = "UPDATE Groups SET name=?, description=?, email=? WHERE id=?";
 
-			dbms.execute(query, name, descr, email, new Integer(id));
+			dbms.execute(query, name, descr, email, Integer.valueOf(id));
 
 			elRes.addContent(new Element(Jeeves.Elem.OPERATION).setText(Jeeves.Text.UPDATED));
 		}
@@ -83,6 +81,3 @@ public class Update implements Service
 		return elRes;
 	}
 }
-
-//=============================================================================
-
