@@ -28,7 +28,6 @@ import java.util.List;
 import java.util.Map;
 
 import jeeves.exceptions.UserLoginEx;
-import jeeves.interfaces.Service;
 import jeeves.resources.dbms.Dbms;
 import jeeves.server.ProfileManager;
 import jeeves.server.ServiceConfig;
@@ -40,6 +39,7 @@ import org.fao.geonet.constants.Geonet;
 import org.fao.geonet.kernel.security.GeonetworkUser;
 import org.fao.geonet.kernel.setting.SettingManager;
 import org.fao.geonet.lib.Lib;
+import org.fao.geonet.services.NotInReadOnlyModeService;
 import org.jdom.Element;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.context.SecurityContextHolder;
@@ -55,7 +55,7 @@ import org.springframework.security.core.context.SecurityContextHolder;
  * @author James Dempsey <James.Dempsey@csiro.au>
  * @version $Revision: 1629 $
  */
-public class ShibLogin implements Service
+public class ShibLogin extends NotInReadOnlyModeService
 {
 	private static final String VIA_SHIBBOLETH = "Via Shibboleth";
 	private static final String SHIBBOLETH_FLAG = "SHIBBOLETH";
@@ -67,7 +67,9 @@ public class ShibLogin implements Service
 	//---
 	//--------------------------------------------------------------------------
 
-	public void init(String appPath, ServiceConfig params) throws Exception {}
+	public void init(String appPath, ServiceConfig params) throws Exception {
+        super.init(appPath, params);
+    }
 
 	//--------------------------------------------------------------------------
 	//---
@@ -78,7 +80,7 @@ public class ShibLogin implements Service
 	/* (non-Javadoc)
 	 * @see jeeves.interfaces.Service#exec(org.jdom.Element, jeeves.server.context.ServiceContext)
 	 */
-	public Element exec(Element params, ServiceContext context) throws Exception
+	public Element serviceSpecificExec(Element params, ServiceContext context) throws Exception
 	{
 		// Get the header keys to lookup from the settings
 		GeonetContext  gc = (GeonetContext) context.getHandlerContext(Geonet.CONTEXT_NAME);
@@ -126,12 +128,13 @@ public class ShibLogin implements Service
 
 		String query = "SELECT * FROM Users WHERE username = ? ";
 
-		List list = dbms.select(query, username).getChildren();
+		@SuppressWarnings("unchecked")
+        List<Element> list = dbms.select(query, username).getChildren();
 
-		if (list.size() == 0)
+		if (list.isEmpty())
 			throw new UserLoginEx(username);
 
-		Element userEl = (Element) list.get(0);
+		Element userEl = list.get(0);
 	
 		GeonetworkUser user = new GeonetworkUser(context.getProfileManager(), username, userEl);
 		UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(user.getUsername(), null, user.getAuthorities() ) ;
@@ -172,7 +175,8 @@ public class ShibLogin implements Service
         if (groupProvided) {
             String query = "SELECT id FROM Groups WHERE name=?";
 
-            List list  = dbms.select(query, group).getChildren();
+            @SuppressWarnings("unchecked")
+            List<Element> list  = dbms.select(query, group).getChildren();
 
             if (list.isEmpty()) {
                 groupId = context.getSerialFactory().getSerial(dbms, "Groups");
@@ -184,7 +188,7 @@ public class ShibLogin implements Service
             } else {
                 String gi = ((Element) list.get(0)).getChildText("id");
 
-                groupId = new Integer(gi).intValue();
+                groupId = Integer.valueOf(gi).intValue();
             }
         }
 		//--- update user information into the database
@@ -206,9 +210,10 @@ public class ShibLogin implements Service
 
             if (groupProvided) {
                 String query2 = "SELECT count(*) as numr FROM UserGroups WHERE groupId=? and userId=?";
-                List list  = dbms.select(query2, groupId, userId).getChildren();
+                @SuppressWarnings("unchecked")
+                List<Element> list  = dbms.select(query2, groupId, userId).getChildren();
 
-                String count = ((Element) list.get(0)).getChildText("numr");
+                String count = list.get(0).getChildText("numr");
 
                  if (count.equals("0")) {
                      query = "INSERT INTO UserGroups(userId, groupId) "+
