@@ -24,12 +24,10 @@
 package org.fao.geonet.services.metadata;
 
 import jeeves.constants.Jeeves;
-import jeeves.interfaces.Service;
 import jeeves.resources.dbms.Dbms;
 import jeeves.server.ServiceConfig;
 import jeeves.server.UserSession;
 import jeeves.server.context.ServiceContext;
-import jeeves.utils.BinaryFile;
 import org.fao.geonet.GeonetContext;
 import org.fao.geonet.constants.Geonet;
 import org.fao.geonet.kernel.AccessManager;
@@ -42,20 +40,17 @@ import org.fao.geonet.util.FileCopyMgr;
 import org.jdom.Element;
 
 import java.io.File;
-import java.io.FileInputStream;
-import java.io.FileOutputStream;
 import java.util.HashSet;
 import java.util.Iterator;
 import java.util.Set;
 
-//=============================================================================
-
-/** Removes a metadata from the system
-  */
-
-public class BatchDelete implements Service
-{
-	public void init(String appPath, ServiceConfig params) throws Exception {}
+/**
+ * Removes a metadata from the system.
+ */
+public class BatchDelete extends BackupFileService {
+	public void init(String appPath, ServiceConfig params) throws Exception {
+        super.init(appPath, params);
+    }
 
 	//--------------------------------------------------------------------------
 	//---
@@ -63,8 +58,7 @@ public class BatchDelete implements Service
 	//---
 	//--------------------------------------------------------------------------
 
-	public Element exec(Element params, ServiceContext context) throws Exception
-	{
+	public Element serviceSpecificExec(Element params, ServiceContext context) throws Exception {
 		GeonetContext gc = (GeonetContext) context.getHandlerContext(Geonet.CONTEXT_NAME);
 		DataManager   dataMan   = gc.getDataManager();
 		AccessManager accessMan = gc.getAccessManager();
@@ -95,9 +89,9 @@ public class BatchDelete implements Service
 				MdInfo info = dataMan.getMetadataInfo(dbms, id);
 	
 				if (info == null) {
-					notFound.add(new Integer(id));
+					notFound.add(Integer.valueOf(id));
 				} else if (!accessMan.isOwner(context, id)) {
-					notOwner.add(new Integer(id));
+					notOwner.add(Integer.valueOf(id));
 				} else {
 	
 					//--- backup metadata in 'removed' folder
@@ -113,7 +107,7 @@ public class BatchDelete implements Service
 					dataMan.deleteMetadata(context, dbms, id);
                     if(context.isDebug())
                         context.debug("  Metadata with id " + id + " deleted.");
-					metadata.add(new Integer(id));
+					metadata.add(Integer.valueOf(id));
 				}
 			} else
             if(context.isDebug())
@@ -131,36 +125,4 @@ public class BatchDelete implements Service
 			.addContent(new Element("notOwner").setText(notOwner.size()+""))
 			.addContent(new Element("notFound").setText(notFound.size()+""));
 	}
-
-	//--------------------------------------------------------------------------
-	//---
-	//--- Private methods
-	//---
-	//--------------------------------------------------------------------------
-
-	private void backupFile(ServiceContext context, String id, String uuid, String file)
-	{
-		String outDir = Lib.resource.getRemovedDir(context, id);
-		String outFile= outDir + uuid +".mef";
-
-		new File(outDir).mkdirs();
-
-		try
-		{
-			FileInputStream  is = new FileInputStream(file);
-			FileOutputStream os = new FileOutputStream(outFile);
-
-			BinaryFile.copy(is, os, true, true);
-		}
-		catch(Exception e)
-		{
-			context.warning("Cannot backup mef file : "+e.getMessage());
-			e.printStackTrace();
-		}
-
-		new File(file).delete();
-	}
 }
-
-//=============================================================================
-
