@@ -24,7 +24,6 @@
 package org.fao.geonet.services.metadata;
 
 import jeeves.constants.Jeeves;
-import jeeves.interfaces.Service;
 import jeeves.resources.dbms.Dbms;
 import jeeves.server.ServiceConfig;
 import jeeves.server.UserSession;
@@ -35,6 +34,7 @@ import org.fao.geonet.kernel.AccessManager;
 import org.fao.geonet.kernel.DataManager;
 import org.fao.geonet.kernel.MdInfo;
 import org.fao.geonet.kernel.SelectionManager;
+import org.fao.geonet.services.NotInReadOnlyModeService;
 import org.jdom.Element;
 
 import java.util.HashSet;
@@ -43,20 +43,19 @@ import java.util.List;
 import java.util.Set;
 import java.util.StringTokenizer;
 
-//=============================================================================
-
-/** Stores all operations allowed for a metadata
-  */
-
-public class BatchUpdatePrivileges implements Service
-{
+/**
+ * Stores all operations allowed for a metadata.
+ */
+public class BatchUpdatePrivileges extends NotInReadOnlyModeService {
 	//--------------------------------------------------------------------------
 	//---
 	//--- Init
 	//---
 	//--------------------------------------------------------------------------
 
-	public void init(String appPath, ServiceConfig params) throws Exception {}
+	public void init(String appPath, ServiceConfig params) throws Exception {
+        super.init(appPath, params);
+    }
 
 	//--------------------------------------------------------------------------
 	//---
@@ -64,7 +63,7 @@ public class BatchUpdatePrivileges implements Service
 	//---
 	//--------------------------------------------------------------------------
 
-	public Element exec(Element params, ServiceContext context) throws Exception
+	public Element serviceSpecificExec(Element params, ServiceContext context) throws Exception
 	{
 		GeonetContext gc = (GeonetContext) context.getHandlerContext(Geonet.CONTEXT_NAME);
 		DataManager   dm = gc.getDataManager();
@@ -88,9 +87,9 @@ public class BatchUpdatePrivileges implements Service
 			//--- check access
 			MdInfo info = dm.getMetadataInfo(dbms, id);
 			if (info == null) {
-				notFound.add(new Integer(id));
+				notFound.add(Integer.valueOf(id));
 			} else if (!accessMan.isOwner(context, id)) {
-				notOwner.add(new Integer(id));
+				notOwner.add(Integer.valueOf(id));
 			} else {
 
 				//--- remove old operations
@@ -107,12 +106,10 @@ public class BatchUpdatePrivileges implements Service
 				dm.deleteMetadataOper(dbms, id, skip);
 
 				//--- set new ones
+				@SuppressWarnings("unchecked")
+                List<Element> list = params.getChildren();
 
-				List list = params.getChildren();
-
-				for(int i=0; i<list.size(); i++) {
-					Element el = (Element) list.get(i);
-
+				for (Element el : list) {
 					String name  = el.getName();
 
 					if (name.startsWith("_")) {
@@ -124,7 +121,7 @@ public class BatchUpdatePrivileges implements Service
 						dm.setOperation(context, dbms, id, groupId, operId);
 					}
 				}
-				metadata.add(new Integer(id));
+				metadata.add(Integer.valueOf(id));
 			}
 		}
 		}
@@ -132,7 +129,7 @@ public class BatchUpdatePrivileges implements Service
 		//--- reindex metadata
 		context.info("Re-indexing metadata");
 		BatchOpsMetadataReindexer r = new BatchOpsMetadataReindexer(dm, dbms, metadata);
-		r.processWithFastIndexing();
+		r.process();
 
 		// -- for the moment just return the sizes - we could return the ids
 		// -- at a later stage for some sort of result display
@@ -142,6 +139,3 @@ public class BatchUpdatePrivileges implements Service
 					.addContent(new Element("notFound").setText(notFound.size()+""));
 	}
 }
-
-//=============================================================================
-
