@@ -72,12 +72,13 @@ public class UserGroups implements Service
 
 			// -- get the profile of the user id supplied
 			String query= "SELECT * FROM Users WHERE id=?";
-			List<Element>  uList = dbms.select(query, new Integer(id)).getChildren();
+			@SuppressWarnings("unchecked")
+            List<Element>  uList = dbms.select(query, Integer.valueOf(id)).getChildren();
 
 			if (uList.size() == 0)
 				throw new IllegalArgumentException("user "+id+" doesn't exist");
 
-			Element theUser    = (Element) uList.get(0);
+			Element theUser    = uList.get(0);
 			String  theProfile = theUser.getChildText("profile");
 
 			//--- retrieve user groups of the user id supplied
@@ -87,10 +88,11 @@ public class UserGroups implements Service
 			if (myProfile.equals(Geonet.Profile.ADMINISTRATOR) && (theProfile.equals(Geonet.Profile.ADMINISTRATOR))) {
 				theGroups = dbms.select("SELECT id, name, description FROM Groups");
 			} else {
-				theGroups = dbms.select("SELECT id, name, description FROM UserGroups, Groups WHERE groupId=id AND userId=?",new Integer(id));
+				theGroups = dbms.select("SELECT id, name, description FROM UserGroups, Groups WHERE groupId=id AND userId=?",Integer.valueOf(id));
 			}
 
-			List<Element> list = theGroups.getChildren();
+			@SuppressWarnings("unchecked")
+            List<Element> list = theGroups.getChildren();
 			for (Element group : list) {
 				group.setName("group");
 				elGroups.addContent((Element)group.clone());
@@ -101,7 +103,9 @@ public class UserGroups implements Service
 		//--- retrieve session user groups and check to see whether this user is 
 		//--- allowed to get this info
 
-				List<Element> adminlist = dbms.select("SELECT groupId FROM UserGroups WHERE userId=? or userId =?  group by groupId having count(*) > 1", new Integer(myUserId),new Integer(id)).getChildren();
+				String selectGroupIdQuery = "SELECT groupId FROM UserGroups WHERE userId=? or userId =?  group by groupId having count(*) > 1";
+                @SuppressWarnings("unchecked")
+                List<Element> adminlist = dbms.select(selectGroupIdQuery, Integer.valueOf(myUserId), Integer.valueOf(id)).getChildren();
 				if (adminlist.size() == 0) {
 					throw new OperationNotAllowedEx("You don't have rights to do this because the user you want is not part of your group");
 				}
