@@ -1,22 +1,33 @@
 package org.geonetwork.http.proxy;
 
-import org.apache.commons.httpclient.Header;
-import org.apache.commons.httpclient.HttpClient;
-import org.apache.commons.httpclient.HttpStatus;
-import org.apache.commons.httpclient.methods.GetMethod;
-import org.apache.commons.httpclient.methods.PostMethod;
-import org.apache.commons.httpclient.params.HttpMethodParams;
-import org.geonetwork.http.proxy.util.RequestUtil;
-import org.geonetwork.http.proxy.util.ServletConfigUtil;
+import java.io.IOException;
+import java.io.PrintWriter;
+import java.net.InetAddress;
+import java.net.UnknownHostException;
+import java.util.ArrayList;
+import java.util.Enumeration;
+import java.util.List;
 
 import javax.servlet.ServletConfig;
 import javax.servlet.ServletException;
 import javax.servlet.http.HttpServlet;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
-import java.io.IOException;
-import java.io.PrintWriter;
-import java.util.Enumeration;
+
+import jeeves.utils.Log;
+
+import org.apache.commons.httpclient.Header;
+import org.apache.commons.httpclient.HttpClient;
+import org.apache.commons.httpclient.HttpStatus;
+import org.apache.commons.httpclient.methods.GetMethod;
+import org.apache.commons.httpclient.methods.PostMethod;
+import org.apache.commons.httpclient.methods.RequestEntity;
+import org.apache.commons.httpclient.methods.StringRequestEntity;
+import org.apache.commons.httpclient.params.HttpMethodParams;
+import org.apache.commons.lang.StringUtils;
+import org.fao.geonet.constants.Geonet;
+import org.geonetwork.http.proxy.util.RequestUtil;
+import org.geonetwork.http.proxy.util.ServletConfigUtil;
 
 /**
  * Http proxy for ajax calls
@@ -24,22 +35,24 @@ import java.util.Enumeration;
  * @author Jose Garcia
  */
 public class HttpProxyServlet extends HttpServlet {
+    private static final long serialVersionUID = 1L;
+
     // Url to proxy
-    private final String PARAM_URL = "url";
+    private static final String PARAM_URL = "url";
 
     // Content type parameter name in header
-    private final String HEADER_CONTENT_TYPE = "Content-Type";
+    private static final String HEADER_CONTENT_TYPE = "Content-Type";
 
     // Servlet init parameters set in servlet definition in web.xml
-    private final String INIT_PARAM_ALLOWED_HOSTS = "AllowedHosts";
-    private final String INIT_PARAM_ALLOWED_CONTENT_TYPES = "AllowedContentTypes";
-    private final String INIT_PARAM_DEFAULT_PROXY_URL = "DefaultProxyUrl";
+    private static final String INIT_PARAM_ALLOWED_HOSTS = "AllowedHosts";
+    private static final String INIT_PARAM_ALLOWED_CONTENT_TYPES = "AllowedContentTypes";
+    private static final String INIT_PARAM_DEFAULT_PROXY_URL = "DefaultProxyUrl";
 
     // Default URL for proxy
     private String defaultProxyUrl;
 
     // List of allowed hosts for the proxy
-    private String[] allowedHosts;
+    private List<InetAddress> allowedHosts;
 
     // List of valid content types for request
     private String[] validContentTypes;
@@ -62,8 +75,22 @@ public class HttpProxyServlet extends HttpServlet {
         defaultProxyUrl = ServletConfigUtil.getInitParamValue(servletConfig, INIT_PARAM_DEFAULT_PROXY_URL);
 
         // List of allowed hosts accessed by proxy. If empty, all hosts are allowed
-        if (allowedHostsValues != null) {
-            allowedHosts = allowedHostsValues.split(",");
+        if (StringUtils.isNotEmpty(allowedHostsValues)) {
+            String[] hostNames = allowedHostsValues.split(",");
+            List<InetAddress> addresses = new ArrayList<InetAddress>(hostNames.length * 2);
+            for (String host : hostNames) {
+                try {
+                    InetAddress[] allByName = InetAddress.getAllByName(host);
+                    for (InetAddress inetAddress : allByName) {
+                        addresses.add(inetAddress);
+                    }
+                } catch (UnknownHostException e) {
+                    Log.error(Geonet.GEONETWORK+".httpproxy", "Error resolving address of host:"+host, e);
+                }
+            }
+            if(!addresses.isEmpty()) {
+                this.allowedHosts = addresses;
+            }
         }
 
         // List of allowed content types for request
@@ -87,9 +114,10 @@ public class HttpProxyServlet extends HttpServlet {
             // Get rest of parameters to pass to proxied url
             HttpMethodParams urlParams = new HttpMethodParams();
 
-            Enumeration paramNames = request.getParameterNames();
+            @SuppressWarnings("unchecked")
+            Enumeration<String> paramNames = request.getParameterNames();
             while (paramNames.hasMoreElements()) {
-                String paramName = (String) paramNames.nextElement();
+                String paramName = paramNames.nextElement();
                 if (!paramName.equalsIgnoreCase(PARAM_URL)) {
                     urlParams.setParameter(paramName, request.getParameter(paramName));
                 }
@@ -107,7 +135,7 @@ public class HttpProxyServlet extends HttpServlet {
 
                 // Added support for proxy
                 if (proxyHost != null && proxyPort != null) {
-                    client.getHostConfiguration().setProxy(proxyHost, new Integer(proxyPort));
+                    client.getHostConfiguration().setProxy(proxyHost, Integer.valueOf(proxyPort));
                 }
 
                 httpGet = new GetMethod(url);
@@ -171,9 +199,10 @@ public class HttpProxyServlet extends HttpServlet {
             // Get rest of parameters to pass to proxied url
             HttpMethodParams urlParams = new HttpMethodParams();
 
-            Enumeration paramNames = request.getParameterNames();
+            @SuppressWarnings("unchecked")
+            Enumeration<String> paramNames = request.getParameterNames();
             while (paramNames.hasMoreElements()) {
-                String paramName = (String) paramNames.nextElement();
+                String paramName = paramNames.nextElement();
                 if (!paramName.equalsIgnoreCase(PARAM_URL)) {
                     urlParams.setParameter(paramName, request.getParameter(paramName));
                 }
@@ -198,10 +227,11 @@ public class HttpProxyServlet extends HttpServlet {
 
                 // Added support for proxy
                 if (proxyHost != null && proxyPort != null){
-                    client.getHostConfiguration().setProxy(proxyHost, new Integer(proxyPort));
+                    client.getHostConfiguration().setProxy(proxyHost, Integer.valueOf(proxyPort));
                 }
 
-                httpPost.setRequestBody(body);
+                RequestEntity entity = new StringRequestEntity(body, request.getContentType(), request.getCharacterEncoding());
+                httpPost.setRequestEntity(entity);
 
                 client.executeMethod(httpPost);
 
@@ -276,17 +306,25 @@ public class HttpProxyServlet extends HttpServlet {
      *         False in other case
      */
     private boolean isAllowedHost(String host) {
-        return true;
+        if(host == null || host.trim().isEmpty()) return false;
+        if (allowedHosts == null || allowedHosts.isEmpty()) return true;
 
-        /*System.out.println("isAllowedHost (host): " + host);
-        if ((allowedHosts == null) || (allowedHosts.length == 0)) return true;
+        InetAddress[] targetAddr;
 
-        for (String h : allowedHosts) {
-            if ((!StringUtils.isEmpty(h)) && (h.equals(host))) {
-                return true;
+        try {
+            targetAddr = InetAddress.getAllByName(host);
+        } catch (UnknownHostException e) {
+            return false;
+        }
+
+        for (InetAddress address : allowedHosts) {
+            for (InetAddress targetOpt : targetAddr) {
+                if (targetOpt.equals(address)) {
+                    return true;
+                }
             }
         }
-        return false;*/
+        return false;
     }
 
     /**
